--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ethersproject/shims": "^5.8.0",
+    "@expo/config-plugins": "~10.1.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-vector-icons/material-icons": "^12.1.0",
@@ -49,9 +50,11 @@
     "expo-web-browser": "~14.2.0",
     "fast-text-encoding": "^1.0.6",
     "https-browserify": "^1.0.0",
+    "nativewind": "^4.1.23",
     "node-libs-react-native": "^1.2.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "process": "^0.11.10",
     "punycode": "^2.3.1",
     "querystring-es3": "^0.2.1",
@@ -74,10 +77,10 @@
     "readable-stream": "^4.7.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
+    "tailwindcss": "^3.4.17",
     "timers-browserify": "^2.0.12",
     "util": "^0.12.5",
-    "vm-browserify": "^1.1.2",
-    "@expo/config-plugins": "~10.1.1"
+    "vm-browserify": "^1.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
