--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.alphar33.rustundeadmobile'
+    namespace 'com.getpara.example.expo'
     defaultConfig {
-        applicationId 'com.alphar33.rustundeadmobile'
+        applicationId 'com.getpara.example.expo'
         minSdk rootProject.ext.minSdkVersion
         targetSdk rootProject.ext.targetSdkVersion
         versionCode 1
