--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.alphar33.rustundeadmobile"
+      "package": "com.getpara.example.expo"
     },
     "web": {
       "bundler": "metro",
@@ -52,6 +52,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "16697cd9-89bd-459f-9931-b8181a24f69c"
+      }
     }
   }
 }
