--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@craftzdog/react-native-buffer": "^6.1.0",
     "@ethersproject/shims": "^5.8.0",
     "@expo/config-plugins": "~10.1.1",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@getpara/react-native-wallet": "^2.0.0-alpha.39",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-vector-icons/material-icons": "^12.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -61,13 +63,19 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-config": "1.5.5",
     "react-native-crypto-js": "^1.0.0",
     "react-native-game-engine": "^1.2.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-inappbrowser-reborn": "3.7.0",
+    "react-native-keychain": "^10.0.0",
+    "react-native-modpow": "^1.1.0",
+    "react-native-passkey": "^3.1.0",
     "react-native-passkeys": "^0.3.3",
     "react-native-polyfill-globals": "^3.1.0",
-    "react-native-quick-crypto": "^0.7.15",
+    "react-native-quick-base64": "^2.2.1",
+    "react-native-quick-crypto": "^0.7.17",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
