--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rust-undead-mobile",
+  "name": "Rust Undead",
   "main": "entrypoint.js",
   "version": "1.0.0",
   "scripts": {
@@ -11,9 +11,16 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
+    "@dynamic-labs/client": "^4.25.9",
+    "@dynamic-labs/react-hooks": "^4.25.9",
+    "@dynamic-labs/react-native-extension": "^4.25.9",
+    "@dynamic-labs/sdk-react-core": "^4.25.9",
+    "@dynamic-labs/solana-extension": "^4.25.9",
     "@ethersproject/shims": "^5.8.0",
     "@expo/config-plugins": "~10.1.1",
     "@expo/vector-icons": "^14.1.0",
+    "@magicblock-labs/ephemeral-rollups-sdk": "^0.2.5",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-vector-icons/material-icons": "^12.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -21,6 +28,7 @@
     "@react-navigation/native": "^7.1.6",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
+    "bs58": "^6.0.0",
     "buffer": "^6.0.3",
     "console-browserify": "^1.2.0",
     "constants-browserify": "^1.0.0",
@@ -73,7 +81,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "^13.13.5",
     "readable-stream": "^4.7.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
