Set up arena branch

--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.31.1",
     "@ethersproject/shims": "^5.8.0",
     "@expo/config-plugins": "~10.1.1",
     "@expo/vector-icons": "^14.1.0",
+    "@magicblock-labs/ephemeral-rollups-sdk": "^0.2.5",
+    "@privy-io/react-auth": "^2.21.1",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-vector-icons/material-icons": "^12.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/web3.js": "^1.98.4",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
@@ -50,6 +55,8 @@
     "expo-web-browser": "~14.2.0",
     "fast-text-encoding": "^1.0.6",
     "https-browserify": "^1.0.0",
+    "lucide-react": "^0.536.0",
+    "lucide-react-native": "^0.536.0",
     "nativewind": "^4.1.23",
     "node-libs-react-native": "^1.2.1",
     "os-browserify": "^0.3.0",
@@ -60,6 +67,7 @@
     "querystring-es3": "^0.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-native": "0.79.5",
     "react-native-crypto-js": "^1.0.0",
     "react-native-game-engine": "^1.2.0",
