--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "requireFullScreen": true
+      "requireFullScreen": true,
+      "bundleIdentifier": "com.alphar33.rustundeadmobile"
     },
     "android": {
       "adaptiveIcon": {
@@ -52,6 +53,11 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "f5bae6ad-dcda-403e-b3c5-cabf478c6471"
+      }
     }
   }
 }
