--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
+    "@solana-mobile/mobile-wallet-adapter-protocol": "^2.2.2",
+    "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.2",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "bs58": "^6.0.0",
@@ -75,6 +77,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-passkeys": "^0.3.3",
     "react-native-polyfill-globals": "^3.1.0",
+    "react-native-quick-base64": "^2.2.1",
     "react-native-quick-crypto": "^0.7.15",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
@@ -86,6 +89,7 @@
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
     "tailwindcss": "^3.4.17",
+    "text-encoding": "^0.7.0",
     "timers-browserify": "^2.0.12",
     "util": "^0.12.5",
     "vm-browserify": "^1.1.2"
