--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@coral-xyz/anchor": "^0.31.1",
+    "@coral-xyz/anchor": "^0.28.0",
     "@dynamic-labs/client": "^4.25.9",
     "@dynamic-labs/react-hooks": "^4.25.9",
     "@dynamic-labs/react-native-extension": "^4.25.9",
@@ -28,6 +28,7 @@
     "@react-navigation/native": "^7.1.6",
     "@solana-mobile/mobile-wallet-adapter-protocol": "^2.2.2",
     "@solana-mobile/mobile-wallet-adapter-protocol-web3js": "^2.2.2",
+    "@ungap/structured-clone": "^1.3.0",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "bs58": "^6.0.0",
@@ -88,6 +89,7 @@
     "readable-stream": "^4.7.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
+    "structured-clone": "^0.2.2",
     "tailwindcss": "^3.4.17",
     "text-encoding": "^0.7.0",
     "timers-browserify": "^2.0.12",
